# programming-languages

./: .gitignore  AUTHOR.md  README.md
Examples/AI/: multiMeasurements.py
Examples/AI for Robotics/: inexactMove.py  move.py  uniformDistribution.py
Examples/Design of Computer Programs/: a_testing.py
Examples/Learning Python The Hard Way/: ex13ParametersUnpackingVariables.py
Examples/Petites/: battleship.py  datetime.py  dictSearch.py  factorial.py  index.py  loop_range.py  repr.py
Examples/Python Data Mining/: evalClassifier.py  knn.py  recommender.py
Examples/Software Debugging/: remove_html_markup.py  removed_html_markup.py  simplify.py  time.py
Examples/Software Testing/: queue_testing.py
Examples/Web Browser/: d_reductions.py  subsets.py  sum.py  words_split.py
Examples/scikit-learn/: svm.py
asm/c_interface/: Makefile  add.asm  main.c
asm/gas/: hello.s
c/algorithms/: README.rst
c/check/: demo.c
c/data_structure/: README.rst  struct.c
c/error/: err_info.c  errno.c  errno_advanced.c  errstatus.c
c/graph/: graph.h
c/macro/: concat_macro.c  function_macro.c  macro_args.c  object_macro.c  stringizing_macro.c  variadic_macro.c
c/math/: exp.c
c/openmp/: Makefile  foo.c  foo2.c  hello.c  hello2.c  hello3.c  hello4.c  mergesort.c  print_threads.c  queue.c  section.c  timer.c  vector_add.c  vector_add_plus.c
c/pointer/: data_pointer.c  function_pointer.c  struct.c  struct_pointer.c  struct_pointer2.c  struct_pointer3.c  struct_pointer4.c
c/pthread/: README.rst  cond.c  join.c  mutex.c  pthread_create.c
c/pythonwrapper/: Makefile  foo.cpp  foowrapper.py  test_foowrapper.py
c/stdlib/: qsort.c  sorted_index.c
c/string/: strtok.c  token.c
c/struct/: a.out  function_struct  function_struct.c  list_struct.c  union_struct.c
c/timer/: timer.c
cpp/: .gitignore  README.rst
cpp/algorithms/: lists.cpp
cpp/classes/: main.cpp
cpp/cmake/todo/: CMakeLists.txt  README.rst  main.cc  todo.cc
cpp/cmake/todo/todoCore/: CMakeLists.txt  todo.h
cpp/cmake/todo/todoCore/unitTest/: CMakeLists.txt  todoTest.cc
cpp/cuda/: CMakeLists.txt  README.rst
cpp/cuda/cmake/: CMakeLists.txt
cpp/cuda/src/: hello.cu
cpp/cuda/src/cublas/: 036sgemm.cu  README.rst  samax.cu  sasum.cu  saxpy.cu  scopy.cu  sdot.cu  sgeam.cu  sgemm  snrm2.cu
cpp/cuda/src/cuda_application_design_and_development/: cuda_sync_thread.cu  cusp.cu  map_gpus.cu  seq_async.cu  seq_big.cu  seq_serial.cpp  seq_serial.cu  seq_serial_advanced.cu  test_gather.cu  xor.cu
cpp/cuda/src/curand/: host_api.cu  random_matrix.cu  random_number.cu  random_vector.cu
cpp/cuda/src/demos/: MatrixMul.cu  ReduceBlock.cu  ReduceBlockLarge.cu  TransposeExample.cu  TransposeFillIn.cu  fp_associativity.cpp  reduce.cu  segfault.cu  summation.cpp  summation.cu  transform.cu
cpp/cuda/src/gaussianblur/: gaussianblur.cu
cpp/cuda/src/matrix/: Add.c  Add.cu  Conv.cu  DeviceQuery.cu  HelloWorld.cu  Julia.cc  Julia.cu  Malloc.cu  MatMul.cu  MatMulSharedMem.cu  MatMulStride.cu  MultiDevices.cu  SurfaceMemory.cu  TextureMemory.cu  YUV2RGB.cu
cpp/cuda/src/matrix/outputs/: Add  AddCPU  DeviceQuery  HelloWorld
cpp/cuda/src/nvida_samples/0_Simple/matrixMulCUBLAS/: helper_functions.h  matrixMulCUBLAS  matrixMulCUBLAS.cpp
cpp/cuda/src/nvida_samples/0_Simple/matrixMulCUBLAS/bak/: Makefile.bak2  matrixmul.cpp
cpp/cuda/src/outputs/: ReduceBlock  ReduceBlockLarge  TransposeExample  fp_associativity  hello  matrixMul  reduce  segfault  summation  summation_gpu  transform
cpp/cuda/src/proto/src/: addressbook.proto  read.cpp
cpp/cuda/src/saxpy/: saxpy  saxpy.cu
cpp/cuda/src/thrust/: vector  vector.cu
cpp/cuda/src/utils/: timer.h  utils.h
cpp/deeplearning/: CMakeLists.txt
cpp/deeplearning/fasterrcnn/: CMakeLists.txt  main.cpp
cpp/dlaccelerator/: .gitignore
cpp/eigen/: eigen_demo.cpp  eigen_map.cpp  eigen_mul.cpp  elm.hpp  main.cpp
cpp/fighter_pilot/: .gitignore  README.rst
cpp/forloop/: scale.cpp
cpp/gtest/: CMakeLists.txt  CMakeLists.txt.in
cpp/gtest/demo/: CMakeLists.txt  main.cpp
cpp/gtest/demo/foo/: CMakeLists.txt  foo.cpp  foo.h
cpp/gtest/demo/foo/tests/: CMakeLists.txt  test_foo.cpp
cpp/gtest/helloworld/: HelloWorld.cpp  HelloWorld.h  HelloWorldTest.cpp  Messenger.h  MockMessenger.h
cpp/hackerrank/: cout.cpp
cpp/header/: main  main.cpp
cpp/hex/: Makefile  int2hex.cpp
cpp/im2col/: im2col.hpp  test_im2col.cpp
cpp/matrix/: 1dtrans  1dtrans.cpp  2dvector  2dvector.cpp  main.cpp
cpp/memory/: memheap_overflow.cpp  test
cpp/muse/muse/: CMakeLists.txt
cpp/muse/muse/muse/: CMakeLists.txt
cpp/muse/muse/muse/fineart/conway/: conway.cpp
cpp/opencv/: .gitignore  CMakeLists.txt
cpp/opencv/cmake/: README.rst
cpp/opencv/src/core/: Brightness.cpp  CMakeLists.txt  DisplayImage.cpp  Drawing.cpp  Mask.cpp  ModifyImage.cpp  ScanImage.cpp  Weighted.cpp
cpp/opencv/src/feature2d/: CMakeLists.txt  CornerCustomDetector.cpp  CornerHarrisDetector.cpp  CornerShiTomasiDetector.cpp  CornerSubPixelesDetector.cpp  FeatureDetector.cpp
cpp/opencv/src/gpu/: CMakeLists.txt  similarity.cpp
cpp/opencv/src/highgui/: CMakeLists.txt  Trackbar.cpp  Video.cpp
cpp/opencv/src/imgproc/: Affine.cpp  BackProjection.cpp  Border.cpp  BoundingContours.cpp  CMakeLists.txt  Contours.cpp  ConvexHull.cpp  EdgeDetector.cpp  EllipseContours.cpp  EqualizeHist.cpp  Erosion.cpp  Filter.cpp  HistComparison.cpp  Histgram.cpp  HoughCircle.cpp  HoughLine.cpp  ImageMoments.cpp  Laplace.cpp  Mapping.cpp  PolygonTest.cpp  Pyramids.cpp  Smoothing.cpp  Sobel.cpp  TemplateMatching.cpp  Threshold.cpp  Transformation.cpp
cpp/opencv/videos/: apple.avi
cpp/parallel_programming/: cubingNumbers_cuda.cpp
cpp/smart_pointers/: main.cpp  shared_pointer.cpp
cpp/types/: cast.cpp
db/: README.md
e/functional_hardware_verification/: a_append.e  a_concurrency.e  a_constraints.e  a_dataType.e  a_dataType2.e  a_message.e  a_msg_random.e
examples-libraries/reportlab/: README.rst  canvas.py  coords.py
examples/AI for Robotics/: SenseMove.py  nMove.py
java/: README.rst
javascript/: README.md
vba/: tableSplit.vba
(+1000 files in other folders)
